# api/openapi/auth.yml
@@ -306,6 +306,39 @@ paths:
           description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
+  /domains/users/{memberID}:
+    get:
+      tags:
+        - Domains
+      summary: List users in a domain
+      description: |
+        Retrieves a list of users in a domain. Due to performance concerns, data
+        is retrieved in subsets. The API must ensure that the entire
+        dataset is consumed either by making subsequent requests, or by
+        increasing the subset size of the initial request.
+      parameters:
+        - $ref: "users.yml#/components/parameters/MemberID"
+        - $ref: "#/components/parameters/Limit"
+        - $ref: "#/components/parameters/Offset"
+        - $ref: "#/components/parameters/Metadata"
+        - $ref: "#/components/parameters/Status"
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          $ref: "#/components/responses/DomainsPageRes"
+        "400":
+          description: Failed due to malformed query parameters.
+        "401":
+          description: |
+            Missing or invalid access token provided.
+            This endpoint is available only for administrators.
+        "404":
+          description: A non-existent entity request.
+        "422":
+          description: Database can't process request.
+        "500":
+          $ref: "#/components/responses/ServiceError"
   /keys:
     post:
       operationId: issueKey
@@ -425,39 +458,6 @@ paths:
           description: Failed due to using an existing email address.
         "415":
           description: Missing or invalid content type.
-        "500":
-          $ref: "#/components/responses/ServiceError"
-  /users/{memberID}/domains:
-    get:
-      tags:
-        - Domains
-      summary: List users in a group
-      description: |
-        Retrieves a list of users in a domain. Due to performance concerns, data
-        is retrieved in subsets. The API must ensure that the entire
-        dataset is consumed either by making subsequent requests, or by
-        increasing the subset size of the initial request.
-      parameters:
-        - $ref: "users.yml#/components/parameters/MemberID"
-        - $ref: "#/components/parameters/Limit"
-        - $ref: "#/components/parameters/Offset"
-        - $ref: "#/components/parameters/Metadata"
-        - $ref: "#/components/parameters/Status"
-      security:
-        - bearerAuth: []
-      responses:
-        "200":
-          $ref: "#/components/responses/DomainsPageRes"
-        "400":
-          description: Failed due to malformed query parameters.
-        "401":
-          description: |
-            Missing or invalid access token provided.
-            This endpoint is available only for administrators.
-        "404":
-          description: A non-existent entity request.
-        "422":
-          description: Database can't process request.
         "500":
           $ref: "#/components/responses/ServiceError"
 
